# Lead-gen-agent

./: .gitignore  DEPLOYMENT.md  Dockerfile  MANUAL_PUSH.md  Procfile  README.md  bootstrap.sh  docker-compose.yml  requirements.txt  streamlit_app.py
.github/workflows/: azure-webapps-python.yml  ci.yml  daily-orchestrator.yml  python-package-conda.yml
.streamlit/: config.toml  secrets.toml.example
agent1_schema/: pyproject.toml
agent1_schema/migrations/: 001_init.sql
agent1_schema/models/: __init__.py  db.py
agent1_schema/scripts/: bootstrap.sh
agent2_fdi_scraper/: base.py  pyproject.toml  run.py  upsert.py
agent2_fdi_scraper/parsers/: fia_pdf_parser.py  park_html_parser.py
agent2_fdi_scraper/sources/: fia.py  vsip.py
agent2_fdi_scraper/tests/: test_normalization.py
agent3_people_discovery/: base.py  pyproject.toml  run.py  upsert.py
agent3_people_discovery/extractors/: email_finder.py
agent3_people_discovery/sources/: company_website.py  serp.py
interface/: dashboard.py  pyproject.toml  utils.py
interface/pages/: companies.py  export.py  jobs.py  overview.py  people.py  runs.py
orchestrator/: daily_run.py
orchestrator/cron/: crontab.sample  run-daily.sh  systemd.sample
shared/: embeddings.py  icp.py  icp.yaml  pyproject.toml
shared/tests/: test_icp.py
