[project]
name = "agent2-fdi-scraper"
version = "0.1.0"
description = "FDI Agent — company discovery and enrichment from Vietnamese sources"
requires-python = ">=3.11"
dependencies = [
    "agent1-schema",
    "anthropic>=0.40",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sources", "parsers"]
