[project]
name = "fdi-agent-interface"
version = "0.1.0"
description = "FDI Agent — Streamlit dashboard"
requires-python = ">=3.11"
dependencies = [
    "agent1-schema",
    "streamlit>=1.40",
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pages"]
